make scrollbar always visible to prevent jumping

--- a/src/styles.css
+++ b/src/styles.css
@@ -44,6 +44,10 @@ p {
   padding-left: 1rem !important;
 }
 
+html {
+  overflow-y: scroll;
+}
+
 html,
 body {
   height: fit-content;
